# c-code-factory

./: README.md
c++ example/: Makefile  moc_mainwindow.cpp
c++ example/Battery_Manager/: Battery_Manager.pro  battery_manager.cpp  battery_manager.h  main.cpp  sound_manager.cpp  sound_manager.h
c++ example/Car_task2/: CMakeLists.txt  accelarator.cpp  accelarator.h  brake.cpp  brake.h  car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
c++ example/Copy_constructor_example2/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/Diamond_problem_example/: CMakeLists.txt  cngengine.cpp  cngengine.h  engine.cpp  engine.h  hybrid.cpp  hybrid.h  main.cpp  petrolengine.cpp  petrolengine.h
c++ example/Friend_example1/: CMakeLists.txt  bmw.cpp  bmw.h  car.cpp  car.h  main.cpp  vehicle.cpp  vehicle.h
c++ example/JaiShreeRam/: JaiShreeRam.pro
c++ example/Light_stack/: CMakeLists.txt  light.cpp  light.h  main.cpp  switch.cpp  switch.h  wire.cpp  wire.h
c++ example/New_collage_management/: CMakeLists.txt  collage.cpp  collage.h  main.cpp  management.cpp  management.h  personaldetails.cpp  personaldetails.h  staff.cpp  staff.h  student.cpp  student.h  university.cpp  university.h
c++ example/Push_back_for_vector/: CMakeLists.txt  main.cpp  mycontainer.cpp  mycontainer.h
c++ example/Set_example2/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/TasKVirtualFunction/: CMakeLists.txt  mywidget.cpp
c++ example/Template_example2/: CMakeLists.txt  main.cpp  temp_ex.cpp  temp_ex.h
c++ example/Template_example3/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/Templates_example1/: CMakeLists.txt  main.cpp
c++ example/Thread_example/: main.cpp
c++ example/Unordered_set_example1/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/Vector_example1/: CMakeLists.txt  main.cpp
c++ example/Vector_example2/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/Working_with_Multiple_file/: CMakeLists.txt  main.cpp
c++ example/Working_with_single_file/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/array_example/: CMakeLists.txt  main.cpp
c++ example/copy_constructor_example1/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/demo/: abc.cpp  abc.h  demo.pro  main.cpp
c++ example/encapsulation_example1/: CMakeLists.txt  car.cpp  car.h  main.cpp
c++ example/example/: CMakeLists.txt  main.cpp
c++ example/example1/: CMakeLists.txt  demo.cpp  demo.h  main.cpp
c++ example/example2/: CMakeLists.txt  laptop.cpp  laptop.h  main.cpp
c++ example/example3/: CMakeLists.txt  add.cpp  add.h  cars.cpp  cars.h  main.cpp  student.cpp  student.h
c++ example/example4/: CMakeLists.txt  add.cpp  add.h  main.cpp
c++ example/example6/: CMakeLists.txt  main.cpp  prathik.cpp  prathik.h
c++ example/example7/: CMakeLists.txt  main.cpp  p1.cpp  p1.h  p2.cpp  p2.h
c++ example/example8/: CMakeLists.txt  collage.cpp  collage.h  main.cpp  student.cpp  student.h
c++ example/example9/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/example_task/: CMakeLists.txt  darshan.cpp  darshan.h  main.cpp  prathik.cpp  prathik.h
c++ example/examples/: CMakeLists.txt  main.cpp
c++ example/function_overloading_example/: CMakeLists.txt  main.cpp
c++ example/function_overriding_example1/: CMakeLists.txt  electronicitem.cpp  electronicitem.h  main.cpp  mobile.cpp  mobile.h
c++ example/generate_vehical_data/: CMakeLists.txt  main.cpp
c++ example/inheritance_example1/: CMakeLists.txt  benz.cpp  benz.h  car.cpp  car.h  main.cpp
c++ example/inheritance_example2/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  music.cpp  music.h  phone.cpp  phone.h  smartphone.cpp  smartphone.h
c++ example/inheritance_example3/: CMakeLists.txt  main.cpp  person.cpp  person.h  student.cpp  student.h
c++ example/inheritance_example4/: CMakeLists.txt  businesslaptop.cpp  businesslaptop.h  laptop.cpp  laptop.h  studentlaptop.cpp  studentlaptop.h
c++ example/list_example1/: CMakeLists.txt  main.cpp
c++ example/operator_overloading_example1/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
c++ example/operator_overloading_example2/: CMakeLists.txt  main.cpp  space.cpp  space.h
c++ example/operator_overloading_example3/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp
c++ example/operator_overloading_example4/: main.cpp  operator_overloading_example4.pro  sample.cpp  sample.h  subtraction.cpp  subtraction.h
c++ example/pass_by_value/: CMakeLists.txt  main.cpp
c++ example/program2/: CMakeLists.txt  prathik.cpp  prathik.h
c++ example/set_example1/: CMakeLists.txt  main.cpp
c++ example/state_and_capital_using_map/: CMakeLists.txt  main.cpp
c++ example/template_example4/: CMakeLists.txt  main.cpp  sum.cpp  sum.h
c++ example/template_example5/: CMakeLists.txt  student.cpp
c++ example/tryexample/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  c.cpp  c.h  main.cpp
c++ example/unorderd_set_task1/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/unordered_map_example1/: CMakeLists.txt  main.cpp  student.cpp  student.h
c++ example/untitled/: abc.cpp  abc.h  untitled.pro
c++ example/untitled100/: main.cpp  mywidget.cpp  mywidget.h  untitled100.pro
c++ project/ACProject/: CMakeLists.txt  acvents.cpp  acvents.h  main.cpp  switch.cpp  switch.h  wire.cpp  wire.h
c++ project/AC_Project2/: CMakeLists.txt  ac.cpp  ac.h  finolexwire.cpp  finolexwire.h  havellswire.cpp  havellswire.h  main.cpp  polycabwire.cpp  polycabwire.h  switch.cpp  switch.h  wire.cpp  wire.h
c++ project/AC_project3/: CMakeLists.txt  ac.cpp  ac.h  finolexwire.cpp  finolexwire.h  havellswire.cpp  havellswire.h  main.cpp  polycabwire.cpp  polycabwire.h  switch.cpp  switch.h
c++ project/Auditorium_Booking_With_Calender/: Auditorium_Booking_With_Calender.pro  auditorium.cpp  auditorium.h  auditoriummanagement.cpp  auditoriummanagement.h  auditoriummanager.cpp  auditoriummanager.h  bookingdate.cpp  bookingdate.h  calender.cpp  calender.h  calendermanager.cpp  calendermanager.h  date.cpp  date.h  main.cpp  year.h  (+3 more)
(+368 files in other folders)
